<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/myHome"
        android:title="Home"
        android:icon="@drawable/ic_home" />

    <item
        android:id="@+id/myCalendar"
        android:title="Calendar"
        android:icon="@drawable/ic_calendar"/>

    <item
        android:id="@+id/myTimer"
        android:title="Timer"
        android:icon="@drawable/ic_timer"/>

    <item
        android:id="@+id/myProfile"
        android:title="Profile"
        android:icon="@drawable/ic_profile"/>

</menu>