package com.example.organizd


import android.view.View
import android.view.ViewGroup
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.*
import androidx.test.espresso.assertion.ViewAssertions.matches
import androidx.test.espresso.matcher.ViewMatchers.*
import androidx.test.ext.junit.rules.ActivityScenarioRule
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import org.hamcrest.Description
import org.hamcrest.Matcher
import org.hamcrest.Matchers.allOf
import org.hamcrest.TypeSafeMatcher
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@LargeTest
@RunWith(AndroidJUnit4::class)
class ProfileTest {

    @Rule
    @JvmField
    var mActivityScenarioRule = ActivityScenarioRule(MainActivity::class.java)

    @Test
    fun profileTest() {
        val bottomNavigationItemView = onView(
            allOf(
                withId(R.id.myCalendar), withContentDescription("Calendar"),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.bottomNavigationView),
                        0
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        bottomNavigationItemView.perform(click())

        val materialButton = onView(
            allOf(
                withId(R.id.button), withText("add task"),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.flFragment),
                        0
                    ),
                    5
                ),
                isDisplayed()
            )
        )
        materialButton.perform(click())

        val appCompatEditText = onView(
            allOf(
                withId(R.id.editTextTaskName),
                childAtPosition(
                    childAtPosition(
                        withId(android.R.id.content),
                        0
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        appCompatEditText.perform(replaceText("Task"), closeSoftKeyboard())

        val materialButton2 = onView(
            allOf(
                withId(R.id.button3), withText("Add"),
                childAtPosition(
                    childAtPosition(
                        withId(android.R.id.content),
                        0
                    ),
                    3
                ),
                isDisplayed()
            )
        )
        materialButton2.perform(click())

        val bottomNavigationItemView2 = onView(
            allOf(
                withId(R.id.myHome), withContentDescription("Home"),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.bottomNavigationView),
                        0
                    ),
                    0
                ),
                isDisplayed()
            )
        )
        bottomNavigationItemView2.perform(click())

        val bottomNavigationItemView3 = onView(
            allOf(
                withId(R.id.myProfile), withContentDescription("Profile"),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.bottomNavigationView),
                        0
                    ),
                    3
                ),
                isDisplayed()
            )
        )
        bottomNavigationItemView3.perform(click())

        val textView = onView(
            allOf(
                withId(R.id.textDone), withText("Tasks done: 0"),
                withParent(withParent(withId(R.id.flFragment))),
                isDisplayed()
            )
        )
        textView.check(matches(withText("Tasks done: 0")))

        val textView2 = onView(
            allOf(
                withId(R.id.textUndone), withText("Tasks not done: 1"),
                withParent(withParent(withId(R.id.flFragment))),
                isDisplayed()
            )
        )
        textView2.check(matches(withText("Tasks not done: 1")))

        val textView3 = onView(
            allOf(
                withId(R.id.textUndone), withText("Tasks not done: 1"),
                withParent(withParent(withId(R.id.flFragment))),
                isDisplayed()
            )
        )
        textView3.check(matches(withText("Tasks not done: 1")))

        val bottomNavigationItemView4 = onView(
            allOf(
                withId(R.id.myHome), withContentDescription("Home"),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.bottomNavigationView),
                        0
                    ),
                    0
                ),
                isDisplayed()
            )
        )
        bottomNavigationItemView4.perform(click())

        val appCompatImageButton = onView(
            allOf(
                withId(R.id.edit_button),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.recyclerView),
                        0
                    ),
                    1
                ),
                isDisplayed()
            )
        )
        appCompatImageButton.perform(click())

        val materialButton3 = onView(
            allOf(
                withId(R.id.buttonComplete), withText("Complete"),
                childAtPosition(
                    childAtPosition(
                        withId(android.R.id.content),
                        0
                    ),
                    4
                ),
                isDisplayed()
            )
        )
        materialButton3.perform(click())

        val bottomNavigationItemView5 = onView(
            allOf(
                withId(R.id.myProfile), withContentDescription("Profile"),
                childAtPosition(
                    childAtPosition(
                        withId(R.id.bottomNavigationView),
                        0
                    ),
                    3
                ),
                isDisplayed()
            )
        )
        bottomNavigationItemView5.perform(click())

        val textView4 = onView(
            allOf(
                withId(R.id.textDone), withText("Tasks done: 1"),
                withParent(withParent(withId(R.id.flFragment))),
                isDisplayed()
            )
        )
        textView4.check(matches(withText("Tasks done: 1")))

        val textView5 = onView(
            allOf(
                withId(R.id.textUndone), withText("Tasks not done: 0"),
                withParent(withParent(withId(R.id.flFragment))),
                isDisplayed()
            )
        )
        textView5.check(matches(withText("Tasks not done: 0")))

        val textView6 = onView(
            allOf(
                withId(R.id.textUndone), withText("Tasks not done: 0"),
                withParent(withParent(withId(R.id.flFragment))),
                isDisplayed()
            )
        )
        textView6.check(matches(withText("Tasks not done: 0")))
    }

    private fun childAtPosition(
        parentMatcher: Matcher<View>, position: Int
    ): Matcher<View> {

        return object : TypeSafeMatcher<View>() {
            override fun describeTo(description: Description) {
                description.appendText("Child at position $position in parent ")
                parentMatcher.describeTo(description)
            }

            public override fun matchesSafely(view: View): Boolean {
                val parent = view.parent
                return parent is ViewGroup && parentMatcher.matches(parent)
                        && view == parent.getChildAt(position)
            }
        }
    }
}
